--- a/web/.env
+++ b/web/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_HOST_HTTP=http://127.0.0.1:8001
+NEXT_PUBLIC_HOST_HTTP=http://127.0.0.1:18001
+NEXT_PUBLIC_HOST_RECOMVIDEO=https://api.bilibili.com/x/web-interface/wbi/index/top/feed/rcmd
